# MLForge

./: .env.railway.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  railway.frontend.toml  railway.toml  railway.worker.toml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  Procfile  pyproject.toml  railway.toml  railway.worker.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_rename_metadata_to_model_metadata.py  003_add_model_name_version_unique_constraint.py  004_add_uploaded_status_to_enum.py
backend/app/: __init__.py  celery.py  config.py  database.py  logging_config.py  main.py  middleware.py  worker.py
backend/app/api/: __init__.py  cache.py  deps.py  health.py  jobs.py  models.py  predictions.py
backend/app/crud/: __init__.py  base.py  job.py  ml_model.py  prediction.py
backend/app/models/: __init__.py  job.py  ml_model.py  prediction.py
backend/app/schemas/: __init__.py  common.py  job.py  ml_model.py  prediction.py
backend/app/services/: __init__.py  cache.py  model_cache.py  onnx.py  onnx_service.py  prediction_cache.py  storage.py  storage_service.py
backend/app/tasks/: __init__.py  cleanup.py  inference.py
backend/tests/: __init__.py  conftest.py  test_cache.py  test_celery.py  test_cleanup.py  test_health.py  test_inference_task.py  test_integration.py  test_jobs.py  test_model_cache.py  test_models.py  test_onnx.py  test_performance.py  test_pipeline_commitment.py  test_prediction_cache.py  test_predictions.py  test_storage.py  test_versioning.py
(+54 files in other folders)
